infrastructure/infisical/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical-ingress
  namespace: infisical
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: infisical.chasingthe.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical-infisical-standalone-infisical
                port:
                  number: 8080
          - path: /ss-webhook
            pathType: Exact
            backend:
              service:
                name: infisical-infisical-standalone-infisical
                port:
                  number: 8080
  tls:
    - hosts:
        - infisical.chasingthe.cloud
      secretName: infisical-tls
